--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="primary-navbar">
             <div class="container-fluid"> 
                 <nav class="navbar navbar-expand-lg navbar-dark">
-                    <a class="navbar-brand" href="#"><h5><i class="fas fa-home"></i> Balaji Construction</h5></a>
+                    <a class="navbar-brand" href="#"><img src="./asset/image/logo-sm.png" class="img-fluid filter-img-white-sm" width="250px"/></a>
                     <button class="navbar-toggler" type="button" data-trigger="#main_nav">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -41,7 +41,7 @@
                   
                   <div class="offcanvas-header mt-3">  
                       <button class="btn btn-close float-right"> &times </button>
-                      <h5 class="py-2 text-white"><h5><i class="fas fa-home"></i> Balaji Construction</h5></h5>
+                      <a class="navbar-brand" href="#"><img src="./asset/image/logo-sm.png" class="img-fluid filter-img-white-sm" width="250px"/></a>
                   </div>
                    
                   <ul class="navbar-nav mx-auto">
@@ -361,8 +361,16 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="footer-wrap">
-                            <h5><i class="fas fa-home"></i> Balaji Construction</h5>
-                            <p class="font-size-13">Balaji Construction in Taluk Office Road, Mannargudi</p>
+                            <div class="mb-4 mb-lg-0">
+                                <img src="./asset/image/logo-white.png" class="img-fluid" width="250px"/> 
+                            </div> 
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="footer-wrap">
+                            <h5>About Us</h5>
+                            <p class="font-size-13">Balaji Construction in Mannargudi is one of the leading businesses in the Architects For Apartment. Also known for Builders, Architects For Mall, Builders & Developers, Architects For Residential, Architects For Apartment, Construction Companies, Architects For Building, Building Contractors and much more. Find Address, Contact Number, Reviews & Ratings, Photos, Maps of Balaji Construction, Mannargudi.</p>
                             <div>
                                 <ul class="social-icons-list">
                                     <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
@@ -372,13 +380,6 @@
                                     <li><a href=""><i class="fab fa-youtube"></i></a></li> 
                                 </ul>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="footer-wrap">
-                            <h5>About Us</h5>
-                            <p class="font-size-13">Balaji Construction in Mannargudi is one of the leading businesses in the Architects For Apartment. Also known for Builders, Architects For Mall, Builders & Developers, Architects For Residential, Architects For Apartment, Construction Companies, Architects For Building, Building Contractors and much more. Find Address, Contact Number, Reviews & Ratings, Photos, Maps of Balaji Construction, Mannargudi.</p>
                         </div>
                     </div>
 
