--- a/index.html
+++ b/index.html
@@ -420,10 +420,8 @@
         <script src="asset/lib/owl-carousel/owl.carousel.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
         <script src="./asset/lib/magnific-popup/jquery.magnific-popup.js"></script>
-        <script src="./asset/lib/aos/aos.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
-        <script src="includes/js/jquery.validate.min.js"></script> 
-        <script src="https://rendro.github.io/easy-pie-chart/javascripts/jquery.easy-pie-chart.js"></script>
+        <script src="./asset/lib/aos/aos.js"></script>  
+        <script src="./asset/js/ScrollTrigger.min.js"></script>
 
         <script></script> 
     </body>
